# barcode-reader-c-cpp-samples

./: .gitignore  CMakeLists.txt  LICENSE.md  Legal.txt  README.md
CustomTemplates/: ReadSingleBarcode.json
Distributables/Lib/Windows/x64/: DynamsoftBarcodeReaderx64.lib  DynamsoftCaptureVisionRouterx64.lib  DynamsoftCorex64.lib  DynamsoftImageProcessingx64.lib  DynamsoftLicensex64.lib  DynamsoftUtilityx64.lib
Distributables/Lib/Windows/x86/: DynamsoftBarcodeReaderx86.lib  DynamsoftCaptureVisionRouterx86.lib  DynamsoftCorex86.lib  DynamsoftImageProcessingx86.lib  DynamsoftLicensex86.lib  DynamsoftUtilityx86.lib
Include/: DynamsoftBarcodeReader.h  DynamsoftCaptureVisionRouter.h  DynamsoftCodeParser.h  DynamsoftCore.h  DynamsoftDocumentNormalizer.h  DynamsoftImageProcessing.h  DynamsoftLabelRecognizer.h  DynamsoftLicense.h  DynamsoftUtility.h
Lib/Windows/x64/: DynamsoftCaptureVisionRouterx64.lib  DynamsoftCorex64.lib  DynamsoftUtilityx64.lib
Lib/Windows/x86/: DynamsoftCaptureVisionRouterx86.lib  DynamsoftCorex86.lib  DynamsoftUtilityx86.lib
Lib2/Windows/x86/: DynamsoftCaptureVisionRouterx86.lib
Samples/BarcodePerformanceEvaluator/: BarcodePerformanceEvaluator.cpp  BarcodePerformanceEvaluator.sln  BarcodePerformanceEvaluator.vcxproj  CMakeLists.txt  DbrBarcodeFileReader.cpp  DbrBarcodeFileReader.h
Samples/GeneralSettings/: CMakeLists.txt  GeneralSettings.cpp  GeneralSettings.sln  GeneralSettings.vcxproj
Samples/HelloWorld/ReadAnImage/: Makefile  ReadAnImage.cpp  ReadAnImage.vcxproj
Samples/HelloWorld/ReadMultipleImages/: Makefile  ReadMultipleImages.cpp  ReadMultipleImages.vcxproj
Samples/MultiThreadDecoding/: CMakeLists.txt  MultiThreadDecoding.cpp  MultiThreadDecoding.sln  MultiThreadDecoding.vcxproj
Samples/ParameterTuner/: CMakeLists.txt  ParameterTuner.cpp  ParameterTuner.sln  ParameterTuner.vcxproj  ParameterTuner.vcxproj.filters
Samples/ReadDPMBarcode/: CMakeLists.txt  ReadDPMBarcode.cpp  ReadDPMBarcode.sln  ReadDPMBarcode.vcxproj
Samples/ShowLocalizedVSDecodedBarcodes/: CMakeLists.txt  ShowLocalizedVSDecodedBarcodes.cpp  ShowLocalizedVSDecodedBarcodes.sln  ShowLocalizedVSDecodedBarcodes.vcxproj  ShowLocalizedVSDecodedBarcodes.vcxproj.filters
Samples/VideoDecoding/: CMakeLists.txt  VideoDecoding.cpp  VideoDecoding.vcxproj
Samples/VideoDecoding/thirdLib/Include/opencv2/: opencv_modules.hpp
Samples/VideoDecoding/thirdLib/Include/opencv2/core/: softfloat.hpp
include/: DynamsoftBarcodeReader.h  DynamsoftCaptureVisionRouter.h  DynamsoftCodeParser.h  DynamsoftCore.h  DynamsoftLabelRecognizer.h  DynamsoftLicense.h  DynamsoftUtility.h
lib/Windows/x64/: DBRx64.lib
lib/Windows/x86/: DBRx86.lib  DynamsoftBarcodeReaderx86.lib  DynamsoftCorex86.lib  DynamsoftLicensex86.lib  DynamsoftUtilityx86.lib
samples/C/: BarcodeReaderSamples.sln
samples/C++/: BarcodeReaderSamples.sln
samples/C++/GeneralSettings/: CMakeLists.txt  GeneralSettings.cpp  GeneralSettings.vcxproj
samples/C++/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.vcxproj
samples/C++/MultiThreadDecoding/: CMakeLists.txt  MultiThreadDecoding.cpp  MultiThreadDecoding.vcxproj
samples/C++/Performance/AccuracyFirstSettings/: AccuracyFirstSettings.cpp  AccuracyFirstSettings.vcxproj  CMakeLists.txt
samples/C++/Performance/BatchDecode/: BarcodeFileReader.cpp  BarcodeFileReader.h  BarcodeStatisticsRecorder.cpp  BarcodeStatisticsRecorder.h  BatchDecode.cpp  BatchDecode.vcxproj  CMakeLists.txt  DbrBarcodeFileReader.cpp  DbrBarcodeFileReader.h  stdafx.h
samples/C++/Performance/ReadRateFirstSettings/: CMakeLists.txt  ReadRateFirstSettings.cpp  ReadRateFirstSettings.vcxproj  ReadRateFirstTemplate.json
samples/C++/Performance/SpeedFirstSettings/: CMakeLists.txt  SpeedFirstSettings.cpp  SpeedFirstSettings.vcxproj
samples/C++/UseCases/ReadDPMBarcode/: CMakeLists.txt  ReadDPMBarcode.cpp  ReadDPMBarcode.vcxproj
samples/C++/UseCases/ReadLowQualityBarcodes/: CMakeLists.txt  ReadLowQualityBarcodes.cpp  ReadLowQualityBarcodes.vcxproj
samples/C++/UseCases/ReadLowQualityBarcodes/templates/: Decoding.json
samples/C++/VideoDecoding/: CMakeLists.txt  VideoDecoding.cpp  VideoDecoding.vcxproj
samples/C++/VideoDecoding/thirdLib/lib/Release/: opencv_core345.lib  opencv_highgui345.lib  opencv_videoio345.lib
samples/C/GeneralSettings/: CMakeLists.txt  GeneralSettings.c  GeneralSettings.vcxproj
samples/C/HelloWorld/: CMakeLists.txt  HelloWorld.c  HelloWorld.vcxproj
samples/HelloWorld/: HelloWorld.sln
samples/HelloWorld/ReadMultipleImages/: ReadMultipleImages.cpp
